chore: fix logo width on mobile

--- a/src/less/community/high-performance-tidb-challenge.less
+++ b/src/less/community/high-performance-tidb-challenge.less
@@ -1361,9 +1361,5 @@ section {
                 width: 50%;
             }
         }
-
-        .logo-list img {
-            width: 100%;
-        }
     }
 }
